test/ui/lowering/let-in-with-type-annotation-without-definition.stderr
error[E012]: the let-binding ‘x’ does not have a body
  ┌─ ${TEST_FOLDER}/lowering/let-in-with-type-annotation-without-definition.lushui:1:17
  │
1 │ var = let x: Int in 0
  │                ⟫⟪ missing definition
  │
 help: provide a definition for the let-binding
  ┌─ ${TEST_FOLDER}/lowering/let-in-with-type-annotation-without-definition.lushui:1:17
  │
1 │ var = let x: Int = value in 0
  │                 ~~~~~~~~

error: aborting due to previous error

