test/ui/lowering/let-in-with-type-annotation-without-definition.lushui
var = let x: Int in 0


